# starlette-gzip-request

./: LICENSE  README.md  pyproject.toml
src/starlette_gzip_request/: __init__.py  middleware.py
tests/: conftest.py  test_middleware.py
